# phoenix-agent

./: .dockerignore  .env.digitalocean  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  refactor.py  render.yaml  requirements.txt
.do/: app.yaml
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/session/[id]/: page.tsx
frontend/src/components/: AnalysisView.tsx  CodeSmellList.tsx  DiffReview.tsx  FolderPicker.tsx  Footer.tsx  InputTabs.tsx  Layout.tsx  MetricsCard.tsx  Navbar.tsx  PhaseStepper.tsx  PhaseTimeline.tsx  RefactorForm.tsx  TerminalLog.tsx  TestResults.tsx  WelcomeHero.tsx
frontend/src/components/ui/: button.tsx  card.tsx
frontend/src/hooks/: useAgentSocket.ts
frontend/src/lib/: api.ts
migrations/: 001_initial.sql  002_add_file_contents.sql
sample_project/: .pytest_report.json  pyproject.toml
sample_project/src/: data_processor.py  user_service.py  utils.py
sample_project/tests/: test_data_processor.py  test_user_service.py  test_utils.py
scripts/: codetest.py
src/phoenix_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  input_resolver.py  llm_json.py  models.py  provider.py
src/phoenix_agent/api/: agent_registry.py  main.py  routes.py  schemas.py  websocket.py
src/phoenix_agent/crew/: __init__.py  analyzer_agent.py  base_agent.py  code_gen.py  coder_agent.py  lead_agent.py  strategist_agent.py  task.py  tester_agent.py
src/phoenix_agent/llm/: __init__.py  provider.py
src/phoenix_agent/memory/: history.py  knowledge_graph.py  session.py
src/phoenix_agent/orchestrator/: arbiter.py  executor.py  observer.py  planner.py  reasoner.py  updater.py  verifier.py
src/phoenix_agent/tools/: __init__.py  ast_parser.py  base.py  git_ops.py  registry.py  test_generator.py  test_runner.py
